--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --pattern-ht: 300px;
+  }
+
+  @media screen(sm) {
+    :root {
+      --pattern-ht: 256px;
+    }
+  }
+}
