--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,23 +4,23 @@
 
 @layer base {
   :root {
-    --pattern-ht: 320px;
+    --ht: 320px;
   }
 
-  @media screen(sm) {
+  @screen sm {
     :root {
-      --pattern-ht: 256px;
+      --ht: 256px;
     }
   }
 
   .maps-leaf {
-    height: calc(100vh - var(--pattern-ht));
+    height: calc(100dvh - var(--ht));
   }
 
   @media (max-height: 750px) and (max-width: 1024px),
     (max-height: 600px) and (min-width: 1024px) {
     .maps-leaf {
-      height: 100vh;
+      height: 100dvh;
     }
   }
 }
